# typing-tracker

./: .gitignore  README.md  plan.md
desktop/: index.js  package-lock.json  package.json
inference_model/: keyboard_calibration.txt  main.py  package-lock.json  pyproject.toml
mobile/: Podfile  README.md
mobile/mobile/: CameraManager.swift  ContentView.swift  ContentViewModel.swift  Info.plist  SimpleCameraView.swift  WebRTCManager.swift  mobileApp.swift
mobile/mobile.xcodeproj/: project.pbxproj
mobile/mobileTests/: mobileTests.swift
mobile/mobileUITests/: mobileUITests.swift  mobileUITestsLaunchTests.swift
vit-test/: gpts.py  image.HEIC  main.py  mp.py  pyproject.toml
