[project]
name = "inference-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.0",
    "mediapipe>=0.10.21",
    "opencv-python>=4.11.0.86",
    "pydantic>=2.11.9",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.20",
    "uvicorn>=0.37.0",
]
